# cubrid-cookbook

./: .env.example  .gitignore  AGENTS.md  CONTRIBUTING.md  GETTING_STARTED.md  LICENSE  Makefile  PRD.md  README.md  ROADMAP.md  docker-compose.yml  llms.txt
.github/workflows/: ci.yml  smoke-test.yml
docs/: agent-playbook.md
fundamentals/: README.md
fundamentals/connect/: 01_connect.py  requirements.txt
fundamentals/crud/: 02_crud.py
fundamentals/error-handling/: 01_connection_failure.py  02_constraint_violation.py  05_error_handling.py
fundamentals/lob-handling/: 06_lob.py
fundamentals/orm-basics/: 01_engine.py  03_orm.py  04_relationships.py  05_dml_extensions.py  06_reflection.py  requirements.txt
fundamentals/prepared-statements/: 04_prepared.py
go/cubrid-go/: 01_connect.go  02_crud.go  03_transactions.go  go.sum
go/gorm/: 01_connect.go  02_crud.go  03_transactions.go  04_relationships.go  go.sum
java/jdbc/: README.md  pom.xml
migration/java-to-python/: 01_connection.py  02_crud_dbapi.py  03_crud_orm.py  04_transaction.py  05_batch_operations.py  README.md  requirements.txt
node/cubrid/: 01_connect.js  02_crud.js  03_transactions.js  README.md  package.json
node/drizzle/: 01_connect.js  02_crud.js  03_transactions.js  04_custom_types.js  README.md  package.json
performance/: README.md
performance/bulk-insert/: README.md
pitfalls/: README.md
rust/cubrid-rs/: 01_connect.rs  02_crud.rs  03_transactions.rs  Cargo.toml  README.md
rust/sea-orm-cubrid/: 01_connect.rs  02_crud.rs  Cargo.toml  README.md
scripts/: normalize_output.sh
(+127 files in other folders)
