[package]
name = "cubrid-rs-examples"
version = "1.0.0"
edition = "2021"
description = "CUBRID Cookbook - cubrid-tokio examples"

[[bin]]
name = "01_connect"
path = "01_connect.rs"

[[bin]]
name = "02_crud"
path = "02_crud.rs"

[[bin]]
name = "03_transactions"
path = "03_transactions.rs"

[dependencies]
cubrid-tokio = "0.1"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
