[package]
name = "sea-orm-cubrid-examples"
version = "1.0.0"
edition = "2021"
description = "CUBRID Cookbook - SeaORM backend examples"

[[bin]]
name = "01_connect"
path = "01_connect.rs"

[[bin]]
name = "02_crud"
path = "02_crud.rs"

[dependencies]
sea-orm = { version = "1", features = ["proxy"] }
sea-orm-cubrid = "0.1"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
